# MatchingAlgorithm

./: .clang-format  .clang-tidy  .gitignore  CLAUDE.md  CMakeLists.txt  Dockerfile  Dockerfile.claude  Makefile  README.md  docker-compose.yml  main.cpp  run_claude.sh  start.sh  stop.sh
.github/workflows/: deploy.yml  lint.yml  pr-checks.yml  pr-sanitizers.yml
db/: dump_user.sh  list_tables.sh  schema.sql
docs/: architecture.md  gcloud-reference.md
server/: BRANDING.md  CMakeLists.txt  conn_pool.cpp  conn_pool.h  db_manager.cpp  db_manager.h  db_types.h  server.cpp  thread_pool.h
server/static/: index.html
server/tests/: CMakeLists.txt  test_conn_pool.cpp  test_db_manager.cpp  test_db_manager_integration.cpp  test_db_types.cpp
src/: blossom.cpp  blossom.h  gale_shapley.cpp  gale_shapley.h  hopcroft_karp.cpp  hopcroft_karp.h  hungarian.cpp  hungarian.h
src/tests/: CMakeLists.txt  test_blossom.cpp  test_gale_shapley.cpp  test_hopcroft_karp.cpp  test_hungarian.cpp
